Fixed all the backend scripts and data
